fix logo on mobile

--- a/eahub/static/styles/main.css
+++ b/eahub/static/styles/main.css
@@ -388,6 +388,11 @@ table {
 
 
 @media(max-width: 768px) {
+  .navbar h4 {
+    font-size: 16px;
+    margin-top: 18px;
+  }
+  
   .navbar-signup-md {
     display: none;
   }
